style.css
body,html {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

a { 
  text-decoration: none; 
  color: black;
}

a:visited { text-decoration-color: none;}
a:hover { text-decoration: none; }
a:focus { text-decoration: none; }
a:hover, a:active { text-decoration: none; }

header {
  box-sizing: border-box;
  padding: 1rem 3rem;
}

header:hover {
  text-decoration-line: underline;
}

#container {
  display: flex;
  width: 100%;
  height: 100vh;
  padding: 0 3rem;
  box-sizing: border-box;
  justify-content: space-between;
  align-content: space-around;
  flex-wrap: wrap;
}

#items {
  width: 20vw;
  height: 35vh;
  border-radius: .5rem;
  overflow: hidden;
  box-shadow: 0rem .1rem .3rem #b6b6b6;
}

.items_img {
  width: 100%;
  height: 60%;
  overflow: hidden;
  margin: 0 auto;
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.items_text {
  width: 100%;
  height: 40%;
  box-sizing: border-box;
  padding: 1rem 1rem;
  background-color: #faf9ff;
}

.items_text p {
  margin: 0rem;
}

.text_title {
  font-size: 1.3rem;
  font-weight: bolder;
}

.comming .items_img {
  background-color: #d1d1d1;
}

.comming .items_text {
  display: flex;
  align-items: center;
  font-size: 1.3rem;
  color: #d1d1d1;
}

